# npcmind

./: .env.example  CONTRIBUTING.md  README.md  config.example.yaml  pyproject.toml  requirements.txt
examples/: advanced.py  basic.py
src/: __main__.py  core.py  health.py  utils.py
src/npcmind/: __init__.py  cli.py  models.py  report.py
src/npcmind/npc/: __init__.py  behavior.py  dialogue.py  memory.py  personality.py
src/npcmind/world/: __init__.py  faction.py  schedule.py
tests/: test_behavior.py  test_benchmark.py  test_core.py  test_dialogue.py  test_integration.py  test_memory.py  test_models.py  test_personality.py  test_world.py
